services/workerbee/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workerbee
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: workerbee
  template:
    metadata:
      labels:
        app.kubernetes.io/name: workerbee
    spec:
      containers:
        - name: workerbee
          image: ghcr.io/login-linjeforeningen-for-it/workerbee
          ports:
            - name: http
              containerPort: 8080
            - name: api
              containerPort: 8081
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /api/v2/ping
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v2/ping
              port: api
            initialDelaySeconds: 15
            periodSeconds: 30
            failureThreshold: 5
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 101
            runAsGroup: 102
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
