services/workerbee/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workerbee
spec:
  selector:
    app.kubernetes.io/name: workerbee
  ports:
    - port: 8080
      targetPort: http
