services/workerbee/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workerbee
spec:
  ingressClassName: public
  tls:
    - hosts:
        - workerbee-next.login.no
  rules:
    - host: workerbee-next.login.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: workerbee
                port:
                  number: 8080
